# mdspec

./: .gitignore  Makefile  README.md  pyproject.toml
mdspec/: __init__.py  google.py
scripts/: md_to_typst.py
